processed/gerrit/txt/58142.txt
Change:     58142
Subject:    LU-18740 mgs: size_t in contain_valid_fsname()
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/58142
Change-Id:  I77adc19e4d79d4a84a2cfe3c9601f5536ad8cc81
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Alex Zhuravlev
Created:    2025-02-21 03:11:24.000000000
Updated:    2025-03-19 23:37:38.000000000
Patch Set:  3
Insertions: +1
Deletions:  -1
Comments:   3 (0 unresolved)

--- Labels ---
  Code-Review: Arshad Hussain: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Arshad Hussain, Shaun Tancheff, Timothy Day

--- Commit Message ---
LU-18740 mgs: size_t in contain_valid_fsname()

to fix a build warning with gcc 11.5.0 (Rocky 9.3):

lustre/mgs/mgs_llog.c:4995:13: error: '__builtin_memcmp_eq'
 specified bound [18446744071562067968, 0] exceeds maximum
 object size 9223372036854775807 [-Werror=stringop-overread]
 4995 |         if (memcmp(buf, fsname, namelen) != 0)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~

Test-Parameters: trivial
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I77adc19e4d79d4a84a2cfe3c9601f5536ad8cc81
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58142
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Alex Zhuravlev, 2025-02-21 03:11:24.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-02-21 03:16:31.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Timothy Day, 2025-02-21 03:34:16.000000000) ---
Patch Set 1: Code-Review+1

--- Message (jenkins, 2025-02-21 04:17:19.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/111201/ : SUCCESS

--- Message (Andreas Dilger, 2025-02-21 17:22:49.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

--- Message (Alex Zhuravlev, 2025-02-22 03:14:45.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2025-02-22 03:16:02.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2025-02-22 03:50:24.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/111247/ : SUCCESS

--- Message (Timothy Day, 2025-02-23 22:41:50.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Arshad Hussain, 2025-03-11 00:48:11.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2025-03-19 23:37:35.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2025-03-19 23:37:38.000000000) ---
Change has been successfully cherry-picked as acdf82d3360b252877ffcc7c9d90a4f1ee628bc6 by Oleg Drokin
